[package]
name = "iced_macroquad"
version = "0.1.0"
edition = "2021"

[dependencies]
miniquad = "0.4.6"
macroquad = "0.4.13"

iced_runtime = { git = "https://github.com/iced-rs/iced" }
iced_core = { git = "https://github.com/iced-rs/iced" }
iced_graphics = { git = "https://github.com/iced-rs/iced" }
iced_widget = { git = "https://github.com/iced-rs/iced" }

