[package]
name = "iced_macroquad"
version = "0.1.0"
edition = "2021"

# [workspace]
# members = ["runtime"]

[workspace.dependencies]
iced_core = { git = "https://github.com/iced-rs/iced" }
iced_graphics = { git = "https://github.com/iced-rs/iced" }
iced_widget = { git = "https://github.com/iced-rs/iced" }
# iced_mq_runtime = { path = "runtime" }
iced_runtime = { git = "https://github.com/iced-rs/iced" }

macroquad = "0.4.13"

[dependencies]
macroquad.workspace = true
iced_graphics.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
iced_runtime.workspace = true