[package]
name = "iced_macroquad"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
iced_core = { git = "https://github.com/B0ney/iced", branch = "tiny-skia-color-profile" }
iced_graphics = { git = "https://github.com/B0ney/iced", branch = "tiny-skia-color-profile" }
iced_widget = { git = "https://github.com/B0ney/iced", branch = "tiny-skia-color-profile" }
iced_runtime = { git = "https://github.com/B0ney/iced", branch = "tiny-skia-color-profile" }
iced_tiny_skia = {  git = "https://github.com/B0ney/iced", branch = "tiny-skia-color-profile" }

rustc-hash = "2.0.0"
macroquad = "=0.4.13"

[dependencies]
macroquad.workspace = true
iced_graphics.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
iced_runtime.workspace = true
iced_tiny_skia.workspace = true
bytemuck = { version = "1.9", features = ["derive"] }
tiny-skia = "0.11.4"
